# plex-wrapped

./: .gitignore  README.md  cli-README.md
cli/: README.md  pyproject.toml
cli/src/last_wrapped/: __init__.py  config.py  main.py  orchestrator.py  setup_tui.py
cli/src/last_wrapped/ai/: generators.py  provider.py
cli/src/last_wrapped/extractors/: plex.py
cli/src/last_wrapped/processors/: __init__.py  stats.py  time_analysis.py
cli/src/plex_wrapped/: __init__.py  config.py  main.py
cli/src/plex_wrapped/ai/: provider.py
cli/src/plex_wrapped/extractors/: plex.py
cli/src/plex_wrapped/processors/: stats.py  time_analysis.py
cli/tests/: test_config.py  test_main.py  test_orchestrator.py  test_setup_tui.py
cli/tests/test_ai/: test_generators.py  test_provider.py
cli/tests/test_extractors/: __init__.py  test_plex.py
cli/tests/test_processors/: test_stats.py  test_time_analysis.py
docs/: getting-started.md
docs/audits/: AUDIT_REPORT_2026-01-14.md
docs/plans/: 2024-12-03-last-wrapped-design.md  2024-12-03-last-wrapped-implementation.md  2024-12-04-dynamic-theming-design.md  2024-12-04-dynamic-theming-implementation.md
examples/: config.example.yaml
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/.astro/: settings.json
frontend/src/components/: WrappedExperience.svelte
frontend/src/components/common/: AnimatedNumber.svelte  (+3 more)
frontend/src/layouts/: LandingLayout.astro  WrappedLayout.astro
frontend/src/pages/: index.astro
src/plex_wrapped/: config.py  main.py  orchestrator.py  setup_tui.py  utils.py
src/plex_wrapped/ai/: __init__.py  generators.py
src/plex_wrapped/extractors/: __init__.py
src/plex_wrapped/processors/: images.py
tests/: test_orchestrator.py
tests/test_ai/: __init__.py  test_generators.py  test_provider.py
tests/test_processors/: __init__.py
(+20 files in other folders)
